wishlist and buy now changes

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -309,6 +309,7 @@
   "text-author-books": "Author Books",
   "text-books": "Books",
   "text-buy-now": "Buy Now",
+  "text-add-buynow": "Buy Now",
   "text-formats": "Formats",
   "text-sku": "SKU",
   "text-author": "Author",
